deployment-catalog-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-consumer
  template:
    metadata:
      labels:
        app: catalog-consumer
    spec:
      containers:
        - name: catalog-consumer
          image: igordeandradetudisco/cloudgamefiapcatalogconsumer:2
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          livenessProbe:
            exec:
              command:
                - pgrep
                - -f
                - dotnet
            initialDelaySeconds: 20
            periodSeconds: 20
            failureThreshold: 3
