deployment-notification-api.yaml
apiVersion:  apps/v1 
kind:  Deployment 
metadata: 
  name:  notification-api 
  labels: 
    app:  notification-api
    tier:  backend  
spec: 
  replicas:  1 
  selector: 
    matchLabels: 
      app:  notification-api
  template: 
    metadata: 
      labels: 
        app:  notification-api 
        tier:  backend  
    spec:
      containers: 
        - name:  notification-api 
          image: igordeandradetudisco/cloudgamefiapunotificationapi:2.0
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports: 
            - containerPort:  8080
