ingress.yaml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudgame-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: user.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-api
                port:
                  number: 80

    - host: catalog.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalog-api
                port:
                  number: 80

    - host: payment.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-api
                port:
                  number: 80

    - host: notification.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-api-service
                port:
                  number: 80
